# game-forge

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  idea.md  pyproject.toml
docs/api/: openapi-v1.json
docs/api/schemas/: run-cancel-request-v1.json  sse-run-event-v1.json  ws-client-command-v1.json  ws-server-frame-v1.json
docs/assets/readme/: README.md
docs/superpowers/plans/: 2026-07-06-m0b-foundations.md  2026-07-06-m1-deterministic-trunk.md  2026-07-07-m2a-agent-foundations.md  2026-07-07-m2a-part2-agents.md  2026-07-07-m2b-1-playtest-core.md  2026-07-08-m2b-2-memory.md  2026-07-10-economy-sink-adapter.md  2026-07-10-m3a-bench-metrics.md  2026-07-10-m3d-b0a-evidence-ledger.md  2026-07-11-pre-m4-external-evidence-b0a.md  2026-07-12-pre-m4-core-corrections.md  2026-07-12-pre-m4-cost-latency-report-v2.md  2026-07-12-pre-m4-external-cases-adapter.md  2026-07-12-pre-m4-human-evidence.md  2026-07-12-pre-m4-narrative-evidence.md  2026-07-13-m4a-platform-core.md  2026-07-14-m4b-observability-cost-reliability.md  2026-07-14-m4c-api-worker.md  M0a-vertical-slice.md  (+2 more)
gameforge/: __init__.py
gameforge/agents/: __init__.py  base.py  harness.py  orchestrator.py  playtest_harness.py  scenario_gen.py
gameforge/apps/: __init__.py  identity_cli.py  operational_metrics.py
gameforge/bench/: __init__.py  acceptance.py  agent_costs.py  agent_metrics.py  bases.py  corpus.py  cost_latency.py  external.py  flare_adjudication.py  flare_evidence.py  flare_git.py  flare_mining.py  inject.py  metrics.py  panel.py  payload_codec.py  power.py  report.py  report_contracts.py  run_bench.py  runtime_evidence.py  stats.py  taxonomy.py
gameforge/contracts/: __init__.py  agent_io.py  api.py  auth.py  auto_apply_ownership.py  benchmark.py  canonical.py  cassette.py  cassette_import.py  config_export.py  cost.py  diff.py  dsl.py  env_types.py  errors.py  execution_graphs.py  execution_profiles.py  findings.py  identity.py  ir.py  jobs.py  lineage.py  migration.py  model_router.py  observability.py  playtest.py  provenance.py  regression.py  reliability.py  review.py  routing.py  seeds.py  slo.py  storage.py  versions.py  workflow.py  world.py
gameforge/env/: __init__.py  base.py
gameforge/game/: __init__.py
gameforge/platform/: __init__.py  playtest_payload_schemas.py  terminal_staging.py
gameforge/runtime/: __init__.py  clock.py
gameforge/spine/: __init__.py  patch.py  stats.py
scenarios/: caravan.yaml
scenarios/agents/: dialogue.txt  extraction_doc.md  narrative.yaml
scenarios/bench/: bench-report.html  bench-report.json  bench-report.txt  deterministic-runtime-evidence.json
scenarios/constraints/: narrative.yaml  numeric.yaml  structural.yaml
scenarios/flare_corpus/: CREDITS.flare-engine-wiki.md  CREDITS.flare-game-v0.18-wiki.md  CREDITS.flare-game-wiki.md  NOTICE  adjudication-evidence.json  b0a-decision.json  candidate-ledger.discovered.json  candidate-ledger.json  search-spec.json
scenarios/flare_sample/: NOTICE  items.txt
scenarios/narrative_bench/: corpus-manifest.json  development-evidence.json  development.jsonl  protocol.json  verification-evidence.json
scenarios/outpost/: drop_tables.csv  encounters.csv  format_schema.json  formulas.csv  gacha_pools.csv  interactables.csv  monsters.csv  quest_steps.csv  status_effects.csv
tests/: test_dependency_lint.py
tests/agents/: test_agent_base.py  test_consistency.py  test_consistency_legacy_replay.py  test_consistency_normalization.py  test_consistency_perspective.py  test_extraction.py  test_foundations_acceptance.py  test_generation.py  test_memory_ablation_acceptance.py  test_memtrace.py  test_model_recording_policy.py  test_orchestrator.py  test_part2_acceptance.py  test_playtest_acceptance.py  test_playtest_harness.py  test_playtest_recall_injection.py  test_prompt_library.py  test_prompts.py  test_repair_drafter_context.py  test_repair_search.py  test_repair_verify.py  test_scenario_gen.py  test_triage.py
tests/apps/: test_cli_main.py  test_identity_cli.py  test_m1_acceptance.py  test_operational_metrics.py  test_outpost_slice.py  test_run_review.py  test_run_slice.py  test_run_slice_lineage.py
tests/architecture/: test_human_evidence_boundaries.py  test_narrative_boundaries.py
tests/bench/: conftest.py  flare_git_fixture.py  test_agent_costs.py  test_agent_metrics.py  test_bases.py  test_bench_report.py  test_corpus.py  test_cost_latency.py  test_evidence_stats.py  test_external.py  test_flare_adjudication.py  test_flare_direct_match_replay.py  test_flare_discover.py  test_flare_evidence.py  test_flare_evidence_package.py  test_flare_mining_cli.py  test_human_evidence_acceptance.py  test_inject_narrative.py  test_inject_numeric.py  test_inject_structural.py  test_m3_acceptance.py  test_measured_cost_latency.py  test_measured_report_v2.py  test_metrics.py  test_panel.py  test_power.py  test_run_bench.py  test_runtime_evidence.py  test_taxonomy.py  testbases.py
tests/contracts/: test_agent_io.py  test_canonical.py  test_cassette.py  test_consistency_hint_contract.py  test_dsl.py  test_env_types.py  test_findings.py  test_ir_types.py  test_lineage.py  test_model_router.py  test_review.py  test_world.py  test_world_combat_economy.py
tests/env/: test_base.py
tests/platform/: test_audit_worm.py  test_lineage_store.py
tests/runtime/: test_persistence_migration.py
tests/spine/: test_m1_setup.py  test_patch.py  test_stats.py
web/: .gitignore  .npmrc  .prettierignore  index.html  package-lock.json  package.json  playwright.config.ts  prettier.config.mjs  tsconfig.e2e.json  tsconfig.node.json  vite.config.ts
web/e2e/: accessibility.spec.ts  constraint-publication.spec.ts  journey-a-authoring.spec.ts  journey-b-liveops.spec.ts  smoke.spec.ts  visual-foundation.spec.ts  visual-pages.spec.ts
web/public/: theme-bootstrap.js
web/scripts/: build-visual-evidence-index.mjs  build-visual-evidence-index.test.ts  check-contracts.mjs  check-toolchain.mjs  generate-contracts.mjs  journey-a-demo-storyboard.test.ts  journey-a-demo-storyboard.ts
web/src/: App.test.tsx  App.tsx  main.tsx
(+1031 files in other folders)
