[project]
name = "gameforge"
version = "0.0.0"
description = "GameForge — game-content correctness compiler + agent workbench"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "clingo>=5.6",
    "z3-solver>=4.12",
    "openai>=1.40",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "hypothesis>=6.100",
    "import-linter>=2.0",
    "ruff>=0.5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

# Dependency-direction gate (contract §1 硬约束). All packages live under the
# `gameforge/` namespace; `web/` (frontend) sits beside it and is not analyzed here.
[tool.importlinter]
root_packages = ["gameforge"]
# Required so the external LLM-SDK forbidden modules (openai/anthropic/…) are analyzed.
include_external_packages = true

[[tool.importlinter.contracts]]
name = "spine is LLM-free and trunk-pure"
type = "forbidden"
source_modules = ["gameforge.spine"]
# spine → contracts ONLY (hard rule 4). The airtight enforcement is the AST
# allowlist in tests/test_dependency_lint.py (import-linter cannot express an
# external-package allowlist); this forbidden list is defense-in-depth so the
# `uv run lint-imports` gate ALSO trips on a spine LLM/business import directly.
# Keep the LLM-SDK entries in sync with that allowlist test.
forbidden_modules = [
    "gameforge.runtime",
    "gameforge.env",
    "gameforge.game",
    "gameforge.agents",
    "gameforge.platform",
    "gameforge.apps",
    "gameforge.bench",
    # LLM SDKs — hard rule 4 forbids ANY of them inside the deterministic trunk.
    "openai",
    "anthropic",
    "langchain",
    "langgraph",
    "llama_index",
    "cohere",
    "mistralai",
    "groq",
    "litellm",
    "google",
    "google_generativeai",
    "ollama",
    "vertexai",
    "boto3",
    "huggingface_hub",
    "transformers",
    "replicate",
    "together",
    "dashscope",
    "zhipuai",
]

[[tool.importlinter.contracts]]
name = "contracts depends on no business package"
type = "forbidden"
source_modules = ["gameforge.contracts"]
forbidden_modules = [
    "gameforge.runtime",
    "gameforge.spine",
    "gameforge.env",
    "gameforge.game",
    "gameforge.agents",
    "gameforge.platform",
    "gameforge.apps",
    "gameforge.bench",
]

[[tool.importlinter.contracts]]
name = "env only depends on contracts"
type = "forbidden"
source_modules = ["gameforge.env"]
forbidden_modules = [
    "gameforge.runtime",
    "gameforge.spine",
    "gameforge.game",
    "gameforge.agents",
    "gameforge.platform",
    "gameforge.apps",
    "gameforge.bench",
]

[[tool.importlinter.contracts]]
name = "game only depends on contracts and env"
type = "forbidden"
source_modules = ["gameforge.game"]
forbidden_modules = [
    "gameforge.runtime",
    "gameforge.spine",
    "gameforge.agents",
    "gameforge.platform",
    "gameforge.apps",
    "gameforge.bench",
]

[[tool.importlinter.contracts]]
name = "runtime never imports agents or spine or platform"
type = "forbidden"
source_modules = ["gameforge.runtime"]
forbidden_modules = ["gameforge.agents", "gameforge.spine", "gameforge.platform", "gameforge.apps"]

[[tool.importlinter.contracts]]
name = "platform depends only on contracts, spine, runtime"
type = "forbidden"
source_modules = ["gameforge.platform"]
forbidden_modules = ["gameforge.agents", "gameforge.apps", "gameforge.bench", "gameforge.game", "gameforge.env"]

[[tool.importlinter.contracts]]
name = "LLM SDK only in runtime.model_router"
type = "forbidden"
source_modules = [
    "gameforge.agents",
    "gameforge.spine",
    "gameforge.env",
    "gameforge.game",
    "gameforge.contracts",
    "gameforge.platform",
    "gameforge.apps",
    "gameforge.bench",
    "gameforge.runtime.cassette",
    "gameforge.runtime.config",
    "gameforge.runtime.observability",
    "gameforge.runtime.persistence",
    "gameforge.runtime.secrets",
]
forbidden_modules = [
    "openai", "anthropic", "langchain", "langgraph", "llama_index",
    "cohere", "mistralai", "groq", "litellm", "google", "google_generativeai",
    "ollama", "vertexai", "boto3", "huggingface_hub", "transformers",
    "replicate", "together", "dashscope", "zhipuai",
]
